force-app/main/default/objects/Lote__c/fields/Archivado__c.field-meta.xml
<CustomField>
    <fullName>Archivado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archivado</label>
    <type>Checkbox</type>
</CustomField>