force-app/main/default/objects/Lote__c/fields/Cantidad_Cosechas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Cosechas__c</fullName>
    <description>Número de cosechas registradas para el lote. Actualizado asincrónicamente por ActualizarTotalesLoteQueueable.</description>
    <label>Cantidad de Cosechas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>