force-app/main/default/objects/Lote__c/fields/Eficiencia_Biologica__c.field-meta.xml
<CustomField>
    <fullName>Eficiencia_Biologica__c</fullName>
    <label>Eficiencia Biológica (%)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>