force-app/main/default/objects/Lote__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Campo picklist que indica la etapa actual del lote dentro de su ciclo de vida productivo.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En Inoculación</fullName>
                <default>true</default>
                <label>En Inoculación</label>
            </value>
            <value>
                <fullName>En Colonización</fullName>
            </value>
            <value>
                <fullName>En Producción</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Archivado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>