force-app/main/default/objects/Lote__c/fields/Fecha_Inoculacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inoculacion__c</fullName>
    <label>Fecha Inoculación</label>
    <type>Date</type>
</CustomField>