force-app/main/default/objects/Lote__c/fields/Fecha_Ultima_Cosecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_Cosecha__c</fullName>
    <description>Fecha de la última cosecha registrada para este lote.</description>
    <label>Fecha de Última Cosecha</label>
    <summarizedField>Cosecha__c.Fecha_cosecha__c</summarizedField>
    <summaryForeignKey>Cosecha__c.Lote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>