force-app/main/default/objects/Lote__c/fields/Hay_Primordios__c.field-meta.xml
<CustomField>
    <fullName>Hay_Primordios__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el lote presenta signos de primordios.</description>
    <label>Hay Primordios</label>
    <type>Checkbox</type>
</CustomField>