force-app/main/default/objects/Lote__c/fields/ignia_id__c.field-meta.xml
<CustomField>
    <fullName>ignia_id__c</fullName>
    <externalId>true</externalId>
    <label>ignia id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>