force-app/main/default/objects/Lote__c/fields/Peso_inicial_Kg__c.field-meta.xml
<CustomField>
    <fullName>Peso_inicial_Kg__c</fullName>
    <label>Peso inicial Kg</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>