force-app/main/default/objects/Lote__c/fields/Total_Cosechado_Kg__c.field-meta.xml
<CustomField>
    <fullName>Total_Cosechado_Kg__c</fullName>
    <description>Suma del peso (kg) de todas las cosechas del lote.</description>
    <label>Total Cosechado Kg</label>
    <summarizedField>Cosecha__c.Peso_Kg__c</summarizedField>
    <summaryForeignKey>Cosecha__c.Lote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>