force-app/main/default/objects/Lote__c/validationRules/Fecha_Inoculacion_Futura.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_Inoculacion_Futura</fullName>
    <active>true</active>
    <description>Prevents saving a batch with an inoculation date more than 7 days in the future.</description>
    <errorConditionFormula>Fecha_Inoculacion__c &gt; TODAY() + 7</errorConditionFormula>
    <errorDisplayField>Fecha_Inoculacion__c</errorDisplayField>
    <errorMessage>La fecha de inoculación no puede ser mayor a 7 días en el futuro.</errorMessage>
</ValidationRule>